Fix cloud-store configuration notebook

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -1,6 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Importing data from cloud storage\n",
+    "\n",
+    "In this notebook we'll use [cloud-storage-extension](https://github.com/exasol/cloud-storage-extension/) to import publicly available data from AWS S3 into the \n",
+    "Exasol database. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6ea9d8e0ecc5bbd3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Prerequisites\n",
+    "\n",
+    "Before importing the data we need to configure the database, by setting up cloud-storage-extension jar files and UDF scripts used for the import. This need to be done once for the database."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1912d75f3f8f8b87"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Access configuration"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "40948e6b5e139445"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%run ../utils/access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a3e09393f1b792f2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Setup of cloud-storage-extension"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "63f58637e1c5c7a8"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -10,24 +68,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "a3e09393f1b792f2"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "import pyexasol\n",
-    "from exasol.connections import open_pyexasol_connection"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-03T10:51:26.238517Z",
-     "start_time": "2023-11-03T10:51:26.234997Z"
-    }
-   },
-   "id": "a562bc8fb8a650d5"
+   "id": "95d09c1457b4ae0b"
   },
   {
    "cell_type": "markdown",
@@ -43,6 +84,19 @@
     "collapsed": false
    },
    "id": "839a313d4d1c26d3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6003fd367d36d89a"
   },
   {
    "cell_type": "markdown",
