--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
@@ -11,26 +11,12 @@
     "On the high level it does the following:\n",
     "* retrieves latest release of cloud-storage-extension jar\n",
     "* uploads it into [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm)\n",
-    "* registers UDF scripts for the cloud-storage-extension\n",
-    "\n",
-    "## Sandbox configuration "
+    "* registers UDF scripts for the cloud-storage-extension"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "5d878fcbb2f8481d"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%run ./main_config.ipynb"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "eaac4f6000374d1c"
   },
   {
    "cell_type": "markdown",
