Add link to the main config

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -50,7 +50,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Setup of cloud-storage-extension"
+    "### Setup of cloud-storage-extension\n",
+    "\n",
+    "Before running the setup, you need to perform the \"Main configuration\" in [main_config.ipynb](../main_config.ipynb)"
    ],
    "metadata": {
     "collapsed": false
