--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Prerequisites\n",
     "\n",
-    "Before importing the data we need to configure the database, by setting up cloud-storage-extension jar files and UDF scripts used for the import. This need to be done once for the database."
+    "Before importing the data we need to configure the database, by setting up cloud-storage-extension jar files and UDF scripts used for the import. This needs to be done once for the database."
    ],
    "metadata": {
     "collapsed": false
