Renamed default filename for Secure Configuration Storage

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
@@ -50,7 +50,7 @@
     "        sb_store_file_ = sb_store_file\n",
     "        del sb_store_file\n",
     "    else:\n",
-    "        sb_store_file_ = 'dss_config.sqlite'\n",
+    "        sb_store_file_ = 'ai_lab_secure_configuration_storage.sqlite'\n",
     "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
