First bunch of notebook tests.

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -78,7 +78,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d4ca7457-501f-4c8e-a5c4-85d9e05670f2",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
@@ -121,10 +128,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0d8288e3-0658-44a3-8fc6-92d6e1c4b3f1",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "running_model"
+    ]
+   },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_FILLING_MASK_UDF(\n",
