--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -78,7 +78,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "823b02ed-c50e-4908-a9de-7b358b449e8d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
@@ -130,10 +137,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "346b1b8a-b1aa-4bea-b351-83b8ee6ab7b7",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "running_model"
+    ]
+   },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
@@ -179,10 +193,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "07b71013-b0ae-44c9-a299-ade8e307213c",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "running_model"
+    ]
+   },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
