--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -78,7 +78,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34747971-46a0-4774-93c0-40cea26706fa",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
@@ -128,10 +135,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "40242348-7e1d-4a12-94c2-4d185eaa5d40",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "running_model"
+    ]
+   },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
