--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -79,7 +79,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50a8cc23-bba5-4497-8947-9adc8c83a76c",
-   "metadata": {},
+   "metadata": {
+    "editable": false,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
@@ -114,11 +122,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ed978b7-e610-4989-8185-9f32e98c1649",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "running_model"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# BLOCKED BY THE ABSENCE OF THE sacremoses TOKENIZER IN THE SLC\n",
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "SELECT TE_TRANSLATION_UDF(\n",
     "    NULL,\n",
     "    '{{sb_config.te_bfs_connection}}',\n",
