--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -78,7 +78,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c1d74058-92c2-48ae-b745-5651e32a419a",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
@@ -128,10 +135,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71cabf49-3e4e-4745-bb62-e76e5adeac0b",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "running_model"
+    ]
+   },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_ZERO_SHOT_TEXT_CLASSIFICATION_UDF(\n",
