--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -65,7 +65,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20ea276d-a908-4230-91e4-b3aa8d73f1cc",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "from exasol.transformers_extension_wrapper import initialize_te_extension\n",
