--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -3,7 +3,15 @@
   {
    "cell_type": "markdown",
    "id": "9d14c2ca-1191-4a01-b3fc-e246bc4d0504",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "source": [
     "# SageMaker Extension initialization\n",
     "\n",
