Fixing sagemaker test

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "# URI of the S3 bucket\n",
-    "S3_BUCKET_URI=f\"s3://{sb_config.aws_bucket}\"\n",
+    "S3_BUCKET_URI=f\"s3://{sb_config.sme_aws_bucket}\"\n",
     "\n",
     "# Path in the S3 bucket where the input data will be uploaded.\n",
     "S3_OUTPUT_PATH = \"ida_dataset_path\"\n",
@@ -208,7 +208,7 @@
     "    \"job_name\"                          : \"{{sb_config.JOB_NAME}}\",\n",
     "    \"aws_credentials_connection_name\"   : \"{{sb_config.sme_aws_connection}}\",\n",
     "    \"aws_region\"                        : \"{{sb_config.aws_region}}\",\n",
-    "    \"iam_sagemaker_role\"                : \"{{sb_config.aws_role}}\",\n",
+    "    \"iam_sagemaker_role\"                : \"{{sb_config.sme_aws_role}}\",\n",
     "    \"s3_bucket_uri\"                     : \"{{S3_BUCKET_URI}}\",\n",
     "    \"s3_output_path\"                    : \"{{S3_OUTPUT_PATH}}\",\n",
     "    \"input_schema_name\"                 : \"{{sb_config.db_schema}}\",\n",
@@ -251,7 +251,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6b74a02-4e2d-4a96-be01-cf9658976472",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "job_polling"
+    ]
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -317,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aws_command = f'aws s3 ls s3://{sb_config.aws_bucket}/{S3_OUTPUT_PATH} --recursive'\n",
+    "aws_command = f'aws s3 ls s3://{sb_config.sme_aws_bucket}/{S3_OUTPUT_PATH} --recursive'\n",
     "!{aws_command}"
    ]
   },
