--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
@@ -44,11 +44,11 @@
     "        ('Access Key ID', widgets.Password(value=sb_config.get(CKey.aws_access_key_id)), CKey.aws_access_key_id),\n",
     "        ('Secret Access Key', widgets.Password(value=sb_config.get(CKey.aws_secret_access_key)), CKey.aws_secret_access_key),\n",
     "        ('Region', widgets.Text(value=sb_config.get(CKey.aws_region)), CKey.aws_region),\n",
-    "        ('Role', widgets.Text(value=sb_config.get(CKey.aws_role)), CKey.aws_role),\n",
-    "        ('S3 Bucket', widgets.Text(value=sb_config.get(CKey.aws_bucket)), CKey.aws_bucket),\n",
+    "        ('Sagemaker AWS Role', widgets.Text(value=sb_config.get(CKey.sme_aws_role)), CKey.sme_aws_role),\n",
+    "        ('Sagemaker S3 Bucket', widgets.Text(value=sb_config.get(CKey.sme_aws_bucket)), CKey.sme_aws_bucket),\n",
     "    ]\n",
     "\n",
-    "    return get_generic_config_ui(sb_config, [inputs], ['AWS Access Parameters'])\n"
+    "    return get_generic_config_ui(sb_config, [inputs], ['Set AWS Credentials'])\n"
    ]
   }
  ],
