--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -143,7 +143,7 @@
      "slide_type": ""
     },
     "tags": [
-     "running_model_pyx"
+     "running_model_pyexasol"
     ]
    },
    "outputs": [],
