#136: Added notebook testing for the first batch of notebooks (#148)
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -60,11 +60,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "57029a52-064b-4fda-80bf-289cce50ffc4",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME)"
+    "load_huggingface_model(MODEL_NAME, method='udf')"
    ]
   },
   {
@@ -131,7 +138,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "51b0d826-519a-4e03-9ce0-3827d0756f1d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "running_model_pyexasol"
+    ]
+   },
    "outputs": [],
    "source": [
     "sql = f\"\"\"\n",
