Fix the translation plus some renaming

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -121,7 +121,8 @@
    "id": "f3727075-4680-4f2f-83c2-17e5c22c6a57",
    "metadata": {},
    "source": [
-    "We will collect 5 best answers."
+    "We will collect the 5 best answers.\n",
+    "We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
    ]
   },
   {
