--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -132,6 +132,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dff2b9c8-6b6a-4e7a-b065-898d841a34fc",
+   "metadata": {},
+   "source": [
+    "Let's run the token classification model. We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "40242348-7e1d-4a12-94c2-4d185eaa5d40",
