--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, method='udf')"
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -115,7 +115,20 @@
     "MY_TEXT = 'We all live in a yellow submarine'\n",
     "\n",
     "# Make sure our text can be used in an SQL statement.\n",
-    "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
+    "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")\n",
+    "\n",
+    "SOURCE_LANGUAGE = 'English'\n",
+    "TARGET_LANGUAGE = 'German'\n",
+    "\n",
+    "MAX_TRANSLATION_LENGTH = 200"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb8641d1-1b84-47a5-8ef0-e1f01cd8a412",
+   "metadata": {},
+   "source": [
+    "Let's run the translation model. We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
    ]
   },
   {
@@ -133,17 +146,21 @@
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
-    "SELECT TE_TRANSLATION_UDF(\n",
-    "    NULL,\n",
-    "    '{{sb_config.te_bfs_connection}}',\n",
-    "    '{{sb_config.te_hf_connection}}',\n",
-    "    '{{sb_config.te_models_bfs_dir}}',\n",
-    "    '{{MODEL_NAME}}',\n",
-    "    '{{MY_TEXT}}',\n",
-    "    '',\n",
-    "    '',\n",
-    "    0\n",
-    ")"
+    "WITH MODEL_OUTPUT AS\n",
+    "(\n",
+    "    SELECT TE_TRANSLATION_UDF(\n",
+    "        NULL,\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
+    "        '{{MODEL_NAME}}',\n",
+    "        '{{MY_TEXT}}',\n",
+    "        '{{SOURCE_LANGUAGE}}',\n",
+    "        '{{TARGET_LANGUAGE}}',\n",
+    "        {{MAX_TRANSLATION_LENGTH}}\n",
+    "    )\n",
+    ")\n",
+    "SELECT translation_text, error_message FROM MODEL_OUTPUT"
    ]
   },
   {
