--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -44,28 +44,28 @@
     "\n",
     "class ITDEStatus(Enum):\n",
     "    \"\"\"\n",
-    "    Display status of the Docker-DB\n",
+    "    Display status of the Exasol Docker-DB\n",
     "    \"\"\"\n",
-    "    running = 'Docker-DB is RUNNING'\n",
-    "    stopped = 'Docker-DB is STOPPED'\n",
-    "    missing = 'Docker-DB is NOT CREATED'\n",
+    "    running = 'Exasol Docker-DB is RUNNING'\n",
+    "    stopped = 'Exasol Docker-DB is STOPPED'\n",
+    "    missing = 'Exasol Docker-DB is NOT CREATED'\n",
     "\n",
     "\n",
     "def get_db_selection_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    Creates a UI form for choosing between the Docker-DB and a customer database.\n",
+    "    Creates a UI form for choosing between the Exasol Docker-DB and an external Exasol Database.\n",
     "\n",
     "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
-    "    db_options = ['Docker-DB', 'Custom']\n",
+    "    db_options = ['Exasol Docker-DB', 'External Exasol Database']\n",
     "    db_choice = 0 if sb_config.get(CKey.use_itde, 'True') == 'True' else 1\n",
     "    db_selector = widgets.RadioButtons(options=db_options, value=db_options[db_choice], \n",
     "                                       layout=ui_look.input_layout, style=ui_look.input_style)\n",
     "    select_btn = widgets.Button(description='Select', style=ui_look.button_style, layout=ui_look.button_layout)\n",
-    "    header_lbl = widgets.Label(value='Database Choice', style=ui_look.header_style, layout=ui_look.header_layout)\n",
+    "    header_lbl = widgets.Label(value='Exasol Database Choice', style=ui_look.header_style, layout=ui_look.header_layout)\n",
     "\n",
     "\n",
     "    def select_database(btn):\n",
@@ -84,9 +84,9 @@
     "    return ui\n",
     "\n",
     "\n",
-    "def get_custom_db_config_ui() -> widgets.Widget:\n",
+    "def get_external_db_config_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    Creates a UI form for editing a customer database configuration.\n",
+    "    Creates a UI form for editing an external Exasol Database configuration.\n",
     "    \n",
     "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
@@ -127,7 +127,7 @@
     "\n",
     "def get_docker_db_config_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    Creates a UI form for editing the Docker-DB configuration.\n",
+    "    Creates a UI form for editing the Exasol Docker-DB configuration.\n",
     "\n",
     "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
@@ -154,23 +154,22 @@
     "    if sb_config.get(CKey.use_itde, 'True') == 'True':\n",
     "        return get_docker_db_config_ui()\n",
     "    else:\n",
-    "        return get_custom_db_config_ui()\n",
+    "        return get_external_db_config_ui()\n",
     "\n",
     "\n",
     "def _get_docker_db_action_buttions(itde_exists: bool, itde_running: bool, \n",
     "                                   display_status: widgets.Widget) -> List[widgets.Button]:\n",
     "    \"\"\"\n",
     "    Creates one or two action buttons with the correspondent on_click functions for managing the\n",
-    "    Docker-DB. Depending on the current status (idte_exists, itde_running) of the docker container,\n",
-    "    the \"Start\", \"Restart\" or both buttons are created.\n",
+    "    Exasol Docker-DB. Depending on the current status (idte_exists, itde_running) of the docker\n",
+    "    container, the \"Start\", \"Restart\" or both buttons are created.\n",
     "    When the action is completed successfully, the running status is displayed in the provided\n",
     "    widget (display_status).\n",
     "    \"\"\"\n",
     "\n",
     "    def start_docker_db(btn):\n",
-    "        popup_message('Will start the DockerDB')\n",
     "        try:\n",
-    "            # Need to check if the Docker-DB still exists and not running because\n",
+    "            # Need to check if the Exasol Docker-DB still exists and not running because\n",
     "            # the situation might have changed while the the widgets were hanging around.\n",
     "            itde_exists_now, itde_running_now = is_itde_running(sb_config)\n",
     "            if not itde_running_now:\n",
@@ -182,11 +181,11 @@
     "            display_status.value = ITDEStatus.running.value\n",
     "            btn.icon = 'check'\n",
     "        except Exception as e:\n",
-    "             popup_message('Failed to start the Docker-DB:' + str(e))\n",
+    "             popup_message('Failed to start the Exasol Docker-DB:' + str(e))\n",
     "       \n",
     "    def restart_docker_db(btn):\n",
     "        try:\n",
-    "            # Need to check again if the Docker-DB exists or not because\n",
+    "            # Need to check again if the Exasol Docker-DB exists or not because\n",
     "            # the situation might have changed while the widgets were hanging around.\n",
     "            itde_exists_now, _ = is_itde_running(sb_config)\n",
     "            if itde_exists_now:\n",
@@ -196,7 +195,7 @@
     "            display_status.value = ITDEStatus.running.value\n",
     "            btn.icon = 'check'\n",
     "        except Exception as e:\n",
-    "             popup_message('Failed to restart the Docker-DB:' + str(e))\n",
+    "             popup_message('Failed to restart the Exasol Docker-DB:' + str(e))\n",
     "\n",
     "    if itde_running:\n",
     "        btn_restart = widgets.Button(description='Recreate and Start')\n",
@@ -216,9 +215,9 @@
     "\n",
     "def get_start_docker_db_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    A UI for starting or restarting the Docker-DB.\n",
-    "    It checks if an instance of the Docker-DB is already running or if it exists. In that case\n",
-    "    a warning is displayed.\n",
+    "    A UI for starting or restarting the Exasol Docker-DB.\n",
+    "    It checks if an instance of the Exasol Docker-DB is already running or if it exists.\n",
+    "    In that case a warning is displayed.\n",
     "\n",
     "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
@@ -228,7 +227,7 @@
     "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
-    "    # Get the current status of the Docker-DB.\n",
+    "    # Get the current status of the Exasol Docker-DB.\n",
     "    itde_exists, itde_running = is_itde_running(sb_config)\n",
     "\n",
     "    # Display the status.\n",
@@ -241,9 +240,9 @@
     "        header_lbl.value = ITDEStatus.missing.value\n",
     "    group_items = [header_lbl]\n",
     "        \n",
-    "    # Add a warning message about recreating an existing Docker-DB.\n",
+    "    # Add a warning message about recreating an existing Exasol Docker-DB.\n",
     "    if itde_exists:\n",
-    "        warning_text = 'Please note that recreating the Docker-DB will result in the loss of all data stored in the ' \\\n",
+    "        warning_text = 'Please note that recreating the Exasol Docker-DB will result in the loss of all data stored in the ' \\\n",
     "            f'{\"running\" if itde_running else \"existing\"} instance of the database!'\n",
     "        warning_html = widgets.HTML(value= '<style>p.itde_warning{word-wrap: break-word; color: red;}</style>' \\\n",
     "                                    '<p class=\"itde_warning\">' + warning_text + ' </p>')\n",
