--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -244,7 +244,7 @@
    "source": [
     "## Poll training status\n",
     "\n",
-    "As it was mentioned above, the model training runs asynchronously. We can monitor its progress by polling the Autopilot job status. Please call this script periodically until you see the status as Completed. "
+    "As it was mentioned above, the model training runs asynchronously. We can monitor its progress by polling the Autopilot job status. Please call this script periodically until you see the status as Completed. Please note that the model training with AWS Sagemaker may take a considerable time. At the time when this notebook was designed the waiting time was typically in the range of 1-2 hours."
    ]
   },
   {
