--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -132,6 +132,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "768a97ed-a104-4f89-8c7b-9fdd6558b5ab",
+   "metadata": {},
+   "source": [
+    "Let's run the zero shot text classification model. We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "71cabf49-3e4e-4745-bb62-e76e5adeac0b",
