Apply suggestions from code review
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "source": [
     "We will collect the 5 best answers.\n",
-    "We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+    "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
