--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -130,7 +130,7 @@
    "id": "27b1dd67-ffed-4bf8-9ee7-a1e003cdbcc6",
    "metadata": {},
    "source": [
-    "At the start, the `MY_TEXT` variable has an initial context. We will be updating and printing this variable at every call to the model.\n",
+    "At the start, the `MY_TEXT` variable has an initial context. We will update and print this variable at every call to the model.\n",
     "Please run the next cell multiple times to see how the text evolves."
    ]
   },
