--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -136,7 +136,7 @@
    "id": "dff2b9c8-6b6a-4e7a-b065-898d841a34fc",
    "metadata": {},
    "source": [
-    "Let's run the token classification model. We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+    "Let's run the token classification model. We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
