--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -128,7 +128,7 @@
    "id": "cb8641d1-1b84-47a5-8ef0-e1f01cd8a412",
    "metadata": {},
    "source": [
-    "Let's run the translation model. We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+    "Let's run the translation model. We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
