--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -136,7 +136,7 @@
    "id": "768a97ed-a104-4f89-8c7b-9fdd6558b5ab",
    "metadata": {},
    "source": [
-    "Let's run the zero shot text classification model. We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+    "Let's run the zero shot text classification model. We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
