--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "source": [
     "We will collect 5 best answers.\n",
-    "We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+    "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
