--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -130,7 +130,8 @@
    "id": "43f3f6e9-6f40-49b2-bbba-8954c35b5e06",
    "metadata": {},
    "source": [
-    "We will collect 5 best answers."
+    "We will collect 5 best answers.\n",
+    "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
